<resources>
    <string name="app_name">Breon Lone Worker Safety</string>
    <string name="agree_and_continue">Agree And Continue</string>
    <string name="user_consent_text">Welcome to BREON Lone Worker Safety App. This app collects location data to enable asset safety monitoring of its user: Sign on, Checkin, Tracking, SOS, Assist, Hazard and Sign off even when the app is in background. Please Sign out to stop location capture. If selected to be used, Tracking requires location capture when app is in background.</string>
    <string name="login_description">Welcome to BREON Lone Worker Safety App. Please note, you need to be connected to the Internet to complete login and you will stay logged in until you logoff.</string>
    <string name="login_contact_us">If you have questions please contact BREON Telematics at support@breontelematics.com.au</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="sign_on_management">SIGN-ON MANAGEMENT</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
    <string name="empty_username">Please enter username.</string>
    <string name="password_msg">Password must be 6 letter or more.</string>
    <string name="current_state">Current Asset State is %s</string>
    <string name="check_in_unavailable">CHECK-IN UNAVAILABLE</string>
    <string name="assist_unavailable">ASSIST UNAVAILABLE</string>
    <string name="hazard_unavailable">HAZARD MONITORING UNAVAILABLE</string>
    <string name="sos_unavailable">SOS UNAVAILABLE</string>
    <string name="open_drawer">Drawer opened</string>
    <string name="close_drawer">Drawer closed</string>
    <string name="title_activity_my_dashboard">MyDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_sign_on_management">Sign-On Management</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="sign_on">Sign On</string>
    <string name="sign_off">SIGN OFF</string>
    <string name="asset_name">ASSET NAME: %s</string>
    <string name="sign_on_desc">YOU NEED TO SIGN ON BEFORE WE CAN START MONITORING. \n WHEN YOU CLICK ON THE SIGN ON BUTTON YOUR DASHBOARD CONTROLS WILL BE AVAILABLE UNTIL YOU SIGN OFF.</string>
    <string name="sign_off_desc">WHEN YOU SIGN OFF ALL ASSET MONITORING WILL STOP. \n TO VIEW YOUR DASHBOARD YOU WILL NEED TO SIGNON AGAIN. HOWEVER, YOUR LOCATION WILL BE TRACKED FOR SAFETY MONITORING.</string>
    <string name="select_safety_template">Select a safety template</string>
    <string name="location_tracking_interval">Location Tracking Interval (%s/%s minutes)</string>
    <string name="safety_timer">Safety Timer</string>
    <string name="sign_off_time">Signoff Time</string>
    <string name="btn_save">Save</string>
    <string name="btn_log_off">Logoff</string>
    <string name="dashboard_accessing">Please sign on before accessing the dashboard</string>
    <string name="open_sign_on_management_page">OPEN SIGN-ON MANAGEMENT PAGE</string>
    <string name="settings_unavailable">Settings Unavailable</string>
    <string name="settings_unavailable_desc">You can\'t change your settings while you are signed on, please sign off to view or change your current settings.</string>
    <string name="assist_desc_one">If you need Non Emergency Assistance it can be requested here.</string>
    <string name="assist_desc_two">Enter an optional note to communicate your situation below and press \'REQUEST ASSISTANCE\'. Our Safety Monitoring Center will contact you to assist.</string>
    <string name="request_assistance">REQUEST ASSISTANCE</string>
    <string name="name_status">ASSET NAME / CURRENT STATUS \n %s %s</string>
    <string name="edt_name_hint">Enter a Note (optional)</string>
    <string name="cancel_assist_req">CANCEL ASSISTANCE REQUEST</string>
    <string name="hazard_text">HAZARD Monitoring can be requested here.</string>
    <string name="hazard_desc">IMPORTANT: A Hazard Monitoring duration that times out becomes an SOS event and Emergency Services will be deployed.</string>
    <string name="start_hazard">Start Hazard Monitoring</string>
    <string name="cancel_hazard">Cancel Hazard Monitoring</string>
    <string name="hazard_timer_text">Time remaining to cancel this hazard timer</string>
    <string name="sos_text">An SOS can be sent here.</string>
    <string name="sos_desc">Emergency Services will deployed and Safety Monitoring Operations will contact you.</string>
    <string name="sos_option_one">(1) Enter an optional note to communicate your situation below and press \'SOS\' button.</string>
    <string name="sos_option_two">(2) Please Cancel if SOS no longer needed.</string>
    <string name="sos">SOS</string>
    <string name="cancel_sos">Cancel SOS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in_desc">Please checkin by %s to avoid safety event</string>
    <string name="check_in_asset_name">ASSET NAME / CURRENT STATUS \n %s (NORMAL)</string>
    <string name="check_in_input_hint">Enter a Note (optional)</string>
    <string name="time_remaining_until_next_check_in">Time remaining until next check in</string>
    <string name="_19_minutes_57_seconds">19 minutes, 57 seconds</string>
    <string name="check_in">CHECK IN</string>
    <string name="enter_optional_note">Enter Optional Note</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="enter_sos_event_details">Enter SOS event details</string>
    <string name="count_down_timer">%s minutes, %s seconds</string>
    <string name="raj">Raj</string>
    <string name="_20_minutes">Ex. 20 minutes</string>
    <string name="mobile_test_template_20_minutes_checkin_1_hour">MOBILE Test Template 20 minutes checkin 1 hour</string>
    <string name="_1_hour">1 hour</string>
    <string name="about_nv">About</string>
    <string name="copyright_169_breon_telematics_2021_all_rights_reserved">Copyright © BREON Telematics 2021. All rights reserved.</string>
    <string name="lone_worker_safety">Lone Worker Safety</string>
    <string name="version_1_44">Version : 1.44</string>
    <string name="e_mail_support_breontelematics_com_au">E-mail : support@breontelematics.com.au</string>
    <string name="phone_61_3_8336_3333">Phone : 03 8402 0897</string>
    <string name="view_privacy_policy">VIEW PRIVACY POLICY</string>
    <string name="visit_website">VISIT WEBSITE</string>
    <string name="refresh_token">REFRESH TOKEN</string>
    <string name="token_vreym4dbjxpugtzty1iohl0kthrbeicqosdhxcf29qru1ek01euw8qg3o3ucommmcdsxcoobvalkelxogpctsjwjlpks1y0vwqk6ikpjqxr9ytthb96qji4icezzqx8zkvtafu5hqb7djjc5lisyeoyuar">Token: VREYM4DbjxpUGTZtY1ioHl0KthRBEicQOsdhxcF29QRU1eK01euw8qG3O3uCommMCdsxCooBvalkelXoGPctsjWjLpks1y0vwQk6iKPjQxr9YtThB96qJi4ICEzzQX8ZKvTAfu5Hqb7dJjC5LiSYEoyuar</string>
    <string name="logoff">Logoff</string>
    <string name="are_you_sure_you_want_to_log_off">Are you sure you want to log off ?</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_desc">Location permission is needed for safety monitoring. Please give location permission.</string>
    <string name="choose_option">Choose an option</string>
    <string name="foreground_service_name">Foreground Service Notification</string>
    <string name="foreground_service_notification_title">BREON</string>
    <string name="foreground_service_notification_description">BREON is currently tracking your location.</string>
    <string name="monitoring_service_notification_description">BREON is currently monitoring your device.</string>
    <string name="location_permission_title">Location Permission Consent</string>
    <string name="location_permission_desc">Please allow location service for safety monitoring purpose.</string>
    <string name="user_consent_title">User consent for location</string>
    <string name="user_consent_desc">Location details are utilized to accurately determine the location of the last Sign-In, Hazard report, or SOS alert for enhance user safety and operational efficiency.</string>
    <string name="_done">Done!</string>
    <string name="notification_permission_title">Enable Notification Permission</string>
    <string name="notification_permission_desc">Please allow notification permission to function app properly.</string>
    <string name="default_notification_channel_id">10101</string>
    <string name="fcm_title">@string/app_name</string>
    <string name="fcm_message">Breon notification</string>
    <string name="status_off_duty_desc">Current Asset State is Off Duty, please sign off.</string>
    <string name="off_duty_title">Off Duty</string>
    <string name="off_duty_desc">Current asset state is Off Duty, so you can\'t SignOn until the state change.</string>
    <string name="template_name">Template Name :</string>
    <string name="template_name_value">My template</string>
    <string name="group_name">Group Name :</string>
    <string name="group_name_value">Breon Group</string>
    <string name="l2_name_contact">2nd point of contact :</string>
    <string name="name_contact_value">Name Contact</string>
    <string name="l3_name_contact">3rd point of contact :</string>
    <string name="l4_name_contact">4th point of contact :</string>
    <string name="note_heading">Instructions provided to the BT Operations :</string>
    <string name="note_desc">Note</string>
    <string name="org_name">Organization name :</string>
    <string name="org_name_value">Organization name</string>
    <string name="checkin_duration">Checkin Duration :</string>
    <string name="checkin_duration_value">Ex. 4 minutes</string>
    <string name="shift_duration">Standard Shift Duration :</string>
    <string name="shift_duration_hint">Ex. 8hr</string>
    <string name="header_layout_title">MENU</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>