<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.sign_on_management.SignOnManagementFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLocationIcon"
                    android:layout_width="@dimen/dimen_70"
                    android:layout_height="@dimen/dimen_70"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:src="@drawable/ic_sign_on_icon"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/sign_on_desc"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLocationIcon" />

                <TextView
                    android:id="@+id/tvAssetName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@string/asset_name"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:hint="@string/contact_name"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAssetName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGetContactName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeActionLabel="Next"
                        android:imeOptions="actionNext"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etContactPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:hint="@string/contact_phone"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etContactName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etGetContactPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeActionLabel="Done"
                        android:imeOptions="actionDone"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignOn"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_56"
                    android:layout_marginHorizontal="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:text="@string/sign_on"
                    android:theme="@style/ButtonStyle"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etContactPhone" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/circularLoader"
                    style="@style/Widget.MaterialComponents.CircularProgressIndicator.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:indicatorColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/btnSignOn"
                    app:layout_constraintEnd_toEndOf="@id/btnSignOn"
                    app:layout_constraintStart_toStartOf="@id/btnSignOn"
                    app:layout_constraintTop_toTopOf="@id/btnSignOn"
                    app:trackThickness="@dimen/dimen_3" />

                <TextView
                    android:id="@+id/tvApiError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@id/btnSignOn"
                    app:layout_constraintStart_toStartOf="@id/btnSignOn"
                    app:layout_constraintTop_toBottomOf="@id/btnSignOn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>