<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.activity.UserPermissionActivity">

        <include
            android:id="@+id/appToolbar"
            layout="@layout/app_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appToolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.2"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivAppLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_100"
                    android:src="@drawable/ic_breon_logo_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLocationIcon"
                    android:layout_width="@dimen/dimen_70"
                    android:layout_height="@dimen/dimen_70"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:src="@drawable/iv_user_safety_icon"
                    android:tint="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/ivAppLogo"
                    app:layout_constraintStart_toStartOf="@id/ivAppLogo"
                    app:layout_constraintTop_toBottomOf="@id/ivAppLogo" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:text="@string/login_description"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivLocationIcon" />

                <TextView
                    android:id="@+id/tvContactUs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:letterSpacing="0.0"
                    android:text="@string/login_contact_us"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:hint="@string/hint_username"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvContactUs">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:imeActionLabel="Next"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_24"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:hint="@string/hint_password"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:imeOptions="actionDone"
                        android:textColor="@color/colorPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_56"
                    android:layout_marginHorizontal="@dimen/dimen_20"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:text="@string/login"
                    android:theme="@style/ButtonStyle"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etPassword" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/circularLoader"
                    style="@style/Widget.MaterialComponents.CircularProgressIndicator.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:indicatorColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="@id/btnLogin"
                    app:layout_constraintTop_toTopOf="@id/btnLogin"
                    app:trackThickness="@dimen/dimen_3" />

                <TextView
                    android:id="@+id/tvApiError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:visibility="visible"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="@id/btnLogin"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clLoadUserData"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loader"
                style="@style/Widget.MaterialComponents.CircularProgressIndicator.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:indicatorColor="@color/colorPrimary"
                app:trackThickness="@dimen/dimen_3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loader"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginHorizontal="24dp"
                android:textSize="15sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
